--- a/hexclock.html
+++ b/hexclock.html
@@ -53,10 +53,30 @@ body {
    width: 100%;
    height: 100%;
 }
+h1{
+	color:white;
+	font-weight: 1000;
+	font-size: 15em;
+	 font-size: 13.5vw;
+	text-align: center;
+	position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 50%;
+    height: 30%;
+    margin: auto;
+}
 </style>
 </head>
 
 <body>
+
+<h1>
+<script>
+document.write (time());
+</script></h1>
 </body>
 
 </html>
